--- a/DWEB/ProyectoFlexbox/index.html
+++ b/DWEB/ProyectoFlexbox/index.html
@@ -9,29 +9,38 @@
 <body>
     <section class="flexbox-nav">
         <div class="elem-nav">
-            <p class="texto">a</p>
+            <p class="texto">Home</p>
         </div>
         <div class="elem-nav">
-            <p class="texto">a</p>
+            <p class="texto">About Me</p>
         </div>
         <div class="elem-nav">
-            <p class="texto">a</p>
+            <p class="texto">Services</p>
         </div>
         <div class="elem-nav">
-            <p class="texto">a</p>
+            <p class="texto">Skills</p>
+        </div>
+        <div class="elem-nav">
+            <p class="texto">Portfolio</p>
+        </div>
+        <div class="elem-nav">
+            <p class="texto">Contact</p>
+        </div>
+        <div class="elem-nav">
+            <button class="hireButton">Hire me</p>
         </div>
     </section>
 
 
 
-
-    <section class="home">q</section>
-    <section class="aboutme">q </section>
-    <section class="services"> q</section>
-    <section class="skills">q </section>
-    <section class="portfolio">q </section>
-    <section class="contact">q </section>
-
+    <div class="container">
+        <section class="home">q</section>
+        <section class="aboutme">q </section>
+        <section class="services"> q</section>
+        <section class="skills">q </section>
+        <section class="portfolio">q </section>
+        <section class="contact">q </section>
+    </div>
 
 
 
