--- a/DEC/Unit5/SVG/index.html
+++ b/DEC/Unit5/SVG/index.html
@@ -8,13 +8,8 @@
 </head>
 <body>
     
-<svg width="1000" height="1000" xmlns ="http://www.w3.org/2000/svg">
-    <circle id="pelota" cx="50" cy="50" r="40" stroke="green" stroke-width="2" fill="yellow"></circle>
-</svg>
-
-
-
-
-   
+    <svg id="juego" width="1152" height="864" xmlns="http://www.w3.org/2000/svg">
+        
+    </svg>
 </body>
 </html>
