--- a/DEC/Unit5/SVG/PongGame/index.html
+++ b/DEC/Unit5/SVG/PongGame/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 
-    <svg id="juego" width="1920" height="1080" xmlns="http://www.w3.org/2000/svg">
+    <svg id="juego" width="1920" height="1000" xmlns="http://www.w3.org/2000/svg">
 
     
 </body>
