--- a/DEC/Unit5/SVG/PongGame/index.html
+++ b/DEC/Unit5/SVG/PongGame/index.html
@@ -10,8 +10,12 @@
 <body>
 
 
-    <svg id="juego" width="1920" height="1000" xmlns="http://www.w3.org/2000/svg">
-
+    <div id="marcador">
+        <div id="puntosIzquierda">0</div>
+        <div id="puntosDerecha">0</div>
+    </div>
     
+ 
+    <svg id="juego" width="1920" height="1000" xmlns="http://www.w3.org/2000/svg">
 </body>
 </html>
